k8s/addons/aws_lb_gateway_api/http_gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-alb
spec:
  controllerName: gateway.k8s.aws/alb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wsi-http
  namespace: wsi
spec:
  gatewayClassName: aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: wsi-http
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product
  namespace: wsi
spec:
  parentRefs:
    - name: wsi-http    # Gateway name
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /product
      backendRefs:
        - name: product
          port: 8080
