k8s/addons/aws_lb_gateway_api/tcp_gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-nlb
spec:
  controllerName: gateway.k8s.aws/nlb
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wsi-tcp
  namespace: wsi
spec:
  gatewayClassName: aws-nlb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: wsi-tcp
  listeners:
    - name: tcp
      protocol: TCP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: wsi-tcp
  namespace: wsi
spec:
  parentRefs:
    - name: wsi-tcp
      sectionName: tcp
  rules:
    - backendRefs:
        - name: product
          port: 8080
